@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-10T08:29:21Z",
-  "count" : 1,
-  "count_minmax" : [ 0, 1 ],
-  "count_prev_day_inc" : 2,
+  "timestamp" : "2022-05-10T16:38:49Z",
+  "count" : 2,
+  "count_minmax" : [ 0, 2 ],
+  "count_prev_day_inc" : 3,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
   "uniques_minmax" : [ 0, 1 ],
