@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-10T08:29:21Z",
+  "timestamp" : "2022-05-10T16:38:49Z",
   "count_outdated" : 118,
   "uniques_outdated" : 39,
-  "count" : 141,
+  "count" : 142,
   "uniques" : 57,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
