@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 8,
   "clones": [
     {
@@ -54,7 +54,7 @@
     },
     {
       "timestamp": "2022-05-10T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
