@@ -1,3 +1,9 @@
+2022-05-10T16:38:49Z:
+* notice: last 14d: all unq: 24 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 118 39 / 141 57
+* notice: next accum: outdated-all outdated-unq / all unq: 118 39 / 142 57
+* notice: prev json diff // prev day diff: unq all: +0 +1 / -0 -0 // +1 +3 / -0 -0
+
 2022-05-10T08:29:21Z:
 * notice: last 14d: all unq: 23 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 118 39 / 140 56
